# realme_GT8pro-AndroidB-kernel-source

./: .gitignore  BUILD.bazel  Kconfig.msm  Kconfig.oplus  Kconfig.qtvm  Makefile  bazel.WORKSPACE  build.config.common  build.config.gki.aarch64  build.config.gki.x86_64  build.config.msm.autogvm  build.config.msm.canoe  build.config.msm.canoe.oemvm  build.config.msm.canoe.tuivm  build.config.msm.canoe.vm  build.config.msm.gen3auto  build.config.msm.lahaina  build.config.msm.perf  build.config.msm.sun  build.config.msm.sun.vm  build.config.msm.vienna  build.config.msm.vm  build.config.msm.x1p42100  build.targets  build_with_bazel.py  canoe.bzl  canoe_oemvm.bzl  canoe_tuivm.bzl  canoe_vms.bzl  common_sources.bzl  consolidate.bzl  device.bazelrc  files_gki_aarch64.txt  flatten_kconfig.sh  gen3auto.bzl  modules.bzl  modules.list.msm.canoe  modules.list.msm.gen3auto  modules.list.msm.sun  modules.list.msm.vienna  (+11 more)
android/: ACK_SHA  abi_gki_aarch64_qcom
arch/arm64/: Kconfig  Kconfig.platforms
configs/: autogvm_consolidate.bzl  autogvm_perf.bzl  canoe_consolidate.bzl  canoe_perf.bzl  canoe_tuivm.bzl  canoe_tuivm_debug.bzl  config2bzl.sh  gen3auto_consolidate.bzl  gen3auto_perf.bzl  lahaina_consolidate.bzl  lahaina_perf.bzl  sun_consolidate.bzl  sun_perf.bzl  sun_tuivm.bzl  sun_tuivm_debug.bzl  vienna_consolidate.bzl  vienna_perf.bzl  x1p42100_consolidate.bzl  x1p42100_perf.bzl
drivers/: modules.bzl
drivers/android/: binder.c  binder_internal.h  debug_kinfo.c  vendor_hooks.c
drivers/base/: arch_topology.c
drivers/block/: Kconfig  modules.bzl  virtio_blk.c  virtio_blk_qti_crypto.c  virtio_blk_qti_crypto.h
drivers/bus/: modules.bzl
drivers/char/: Kconfig  modules.bzl
drivers/clk/: modules.bzl
drivers/cpufreq/: Kconfig.arm  Makefile  cpufreq.c  modules.bzl  qcom-cpufreq-hw-debug.c  qcom-cpufreq-hw.c  qcom-cpufreq-thermal.c
drivers/cpuidle/: Kconfig
drivers/crypto/: modules.bzl
drivers/devfreq/: Kconfig  governor_gpubw_mon.c  governor_msm_adreno_ro.c  governor_msm_adreno_tz.c  modules.bzl
drivers/dma/: modules.bzl
drivers/dma-buf/: dma-buf.c
drivers/edac/: Kconfig  Makefile  kryo_arm64_edac.c  (+2 more)
init/: Kconfig
kernel/: Makefile  cred.c  hung_task.c  modules.bzl  softirq.c  torture.c
kleaf-scripts/: abl.bzl  android_build.bzl  avb_boot_img.bzl  consolidate.bzl  ddk_uapi_headers_cc_library.bzl  defconfig_fragment.bzl  dtbs.bzl  generic_qtvm.bzl  image_opts.bzl  modules_register.bzl  modules_unprotected.bzl  msm_common.bzl  msm_dtc.bzl  msm_kernel_extensions.bzl  techpack_modules.bzl  vm_build.bzl
lib/: atomic64_test.c  modules.bzl
mm/: memblock.c  mmap.c  modules.bzl  shmem.c  sparse-vmemmap.c  zsmalloc.c
modules-lists/: modules.list.msm.autogvm  modules.list.msm.canoe  modules.list.msm.lahaina  modules.list.msm.pineapple  modules.list.msm.sun  modules.list.msm.vienna  modules.list.msm.x1p42100  modules.systemdlkm_blocklist.msm.autogvm  modules.systemdlkm_blocklist.msm.canoe  modules.systemdlkm_blocklist.msm.lahaina  modules.vendor_blocklist.msm.autogvm  modules.vendor_blocklist.msm.canoe  modules.vendor_blocklist.msm.lahaina  modules.vendor_blocklist.msm.pineapple  modules.vendor_blocklist.msm.sun  modules.vendor_blocklist.msm.vienna
net/: Kconfig  Makefile  modules.bzl
samples/: Kconfig  Makefile
scripts/: Makefile.dtbinst  Makefile.lib  check-uapi.sh
sound/: modules.bzl
(+1084 files in other folders)
