# SPDX-License-Identifier: GPL-2.0

load("//build:msm_kernel_extensions.bzl", "define_top_level_rules")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_uapi_headers")
load(":kleaf-scripts/android_build.bzl", "define_common_android_rules")
load(":kleaf-scripts/ddk_uapi_headers_cc_library.bzl", "ddk_uapi_headers_cc_library")
load(":kleaf-scripts/dtbs.bzl", "define_qcom_dtb_setup")
load(":kleaf-scripts/generic_qtvm.bzl", "define_qtvm")
load(":kleaf-scripts/targets/canoe.bzl",
    "define_canoe_tuivm",
    "define_canoe_oemvm",
    "define_canoe")
load(":kleaf-scripts/targets/canoe_vms.bzl","define_canoe_vms")
load(":kleaf-scripts/targets/sun_vms.bzl","define_sun_vms")
load(
    ":kleaf-scripts/targets/sun.bzl",
    "define_sun",
    "define_sun_tuivm",
    "define_sun_oemvm",
)
load(":kleaf-scripts/targets/vienna.bzl", "define_vienna")

exports_files(["android/abi_gki_aarch64_qcom"])

define_top_level_rules()

define_common_android_rules()

define_qcom_dtb_setup()

define_qtvm()

wireless_certs_cmd = """
    (echo '#include "reg.h"'; \
    echo 'const u8 shipped_regdb_certs[] = {'; \
    echo | cat - $(SRCS) ; \
    echo '};'; \
    echo 'unsigned int shipped_regdb_certs_len = sizeof(shipped_regdb_certs);'; \
    ) > $@
"""

genrule(
    name = "net/wireless/shipped-certs",
    srcs = glob(["net/wireless/certs/*.hex"]),
    outs = ["net/wireless/shipped-certs.c"],
    cmd = wireless_certs_cmd,
)

filegroup(
    name = "dt_bindings_headers",
    srcs = glob([
        "include/dt-bindings/**/*.h",
    ]),
    visibility = ["//visibility:public"],
)

ddk_headers(
    name = "dt_bindings",
    hdrs = [
        # do not sort
        ":dt_bindings_headers",
    ],
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "additional_msm_headers_aarch64_globs",
    srcs = glob([
        "arch/arm64/include/**/*.h",
        "include/**/*.h",
        "arch/arm/include/**/*.h",
        "include/uapi/**",
    ]),
    visibility = ["//visibility:private"],
)

ddk_headers(
    name = "additional_msm_headers",
    hdrs = [
        # do not sort
        ":additional_msm_headers_aarch64_globs",
    ],
    linux_includes = [
        "arch/arm64/include",
        "arch/arm64/include/uapi",
        "include",
        "include/uapi",
    ],
    visibility = ["//visibility:public"],
)

ddk_headers(
    name = "all_headers",
    hdrs = [
        # do not sort
        ":additional_msm_headers",
        "//common:all_headers",
    ],
    visibility = ["//visibility:public"],
)

ddk_uapi_headers(
    name = "msm_uapi_headers",
    srcs = glob(["include/uapi/**/*.h"]),
    out = "msm_uapi_headers.tar.gz",
    kernel_build = "//common:kernel_aarch64",
)

ddk_uapi_headers_cc_library(
    name = "ddk_uapi_headers",
    header_archive = ":msm_uapi_headers",
)

genrule(
    name = "kconfig.msm.generated",
    srcs = glob(["**/Kconfig*"]),
    outs = ["Kconfig.ext"],
    cmd = "KCONFIG_EXT_PREFIX=soc-repo/ $(location flatten_kconfig.sh) $(location Kconfig.msm) >$@",
    tools = ["flatten_kconfig.sh"],
)

define_canoe()

define_sun()

define_sun_tuivm()

define_sun_oemvm()

define_sun_vms()

define_canoe_tuivm()

define_canoe_oemvm()

define_canoe_vms()

define_vienna()
